# softwareArkitekturAflevering1

./: CMakeLists.txt  README.md  arrayQueue.h  arrayqueue.cpp  listQueue.h  listqueue.cpp  main.cpp  queue.h
test/: test.cpp
